--- a/iPower.Phone/iPower.Phone.csproj
+++ b/iPower.Phone/iPower.Phone.csproj
@@ -156,6 +156,7 @@
     <Content Include="Assets\ApplicationIcon.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Assets\Lyrics.png" />
     <Content Include="Assets\Play.png" />
     <Content Include="Assets\Stop.png" />
     <Content Include="Assets\Tiles\FlipCycleTileLarge.png">
